# ZekaEngine

./: .gitignore  README.md
.github/workflows/: release.yml
technical/: LDOV.md  README.md
zeka/: Cargo.toml  release.sh  release.toml
zeka/zeka_config/: Cargo.toml
zeka/zeka_config/src/: aeacus.rs  checks.rs  encoder.rs  lib.rs  main.rs
zeka/zeka_crypto/: Cargo.toml
zeka/zeka_crypto/src/: consts.rs  dfa.rs  lagrange.rs  lib.rs  main.rs  numbers.rs
zeka/zeka_engine/: Cargo.toml
zeka/zeka_engine/src/: lib.rs  main.rs  providers.rs  report.rs
