[package]
name = "zeka_crypto"
publish = false
version = "0.1.33"
edition = "2024"
authors = ["Alex Jiang <alex@ajiang.xyz>"]

[dependencies]
gmp-mpfr-sys = { version = "1.6.5", default-features = false, features = ["force-cross"] }
hex = "0.4.3"
regex = "1.11.1"
regex-automata = "0.4.9"
rug = { version = "1.27.0", default-features = false, features = ["integer", "rand", "std"] }
sha2 = "0.10.9"
