[package]
name = "zeka_engine"
publish = false
version = "0.1.33"
edition = "2024"
authors = ["Alex Jiang <alex@ajiang.xyz>"]

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.41"
ciborium = "0.2.2"
clap = { version = "4.5.43", features = ["derive"] }
gmp-mpfr-sys = { version = "1.6.5", default-features = false, features = ["force-cross"] }
itertools = "0.14.0"
libc = "0.2.174"
minijinja = "2.12.0"
notify-rust = "4.11.7"
regex = "1.11.2"
rug = { version = "1.27.0", default-features = false, features = ["integer", "rand", "std"] }
serde = "1.0.219"
sha2 = "0.10.9"
spinners = "4.1.1"
windows = { version = "0.48", features = [
  "Win32_System_Diagnostics_Etw",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_System_Time",
  "Win32_Foundation",
] }
zeka_config = { version = "0.1.33", path = "../zeka_config" }
zeka_crypto = { path = "../zeka_crypto" }
